--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,7 @@
-# Required
 numpy
-python-dotenv
+scikit-learn
 sentence-transformers
-
-# Optional extras (install as needed)
-# faiss-cpu
-# scikit-learn
-# openai
-# torch (pulled automatically by sentence-transformers on most platforms)
+faiss-cpu             
+openai                
+python-telegram-bot    
+torch               
